genson-cli/tests/snapshots/map_max_required_keys_snapshots__schema_progression_rk2.snap
---
source: genson-cli/tests/map_max_required_keys_snapshots.rs
expression: value
info:
  input:
    - data:
        always1: val1
        always2: val2
        sometimes: val3
    - data:
        always1: val4
        always2: val5
    - data:
        always1: val6
        always2: val7
        other: val8
---
{
  "$schema": "http://json-schema.org/schema#",
  "properties": {
    "data": {
      "type": "object",
      "additionalProperties": {
        "type": "string"
      }
    }
  },
  "required": [
    "data"
  ],
  "type": "object"
}
